tests/baselines/reference/restArgMissingName.errors.txt
restArgMissingName.ts(1,18): error TS1003: Identifier expected.


==== restArgMissingName.ts (1 errors) ====
    function sum (...) {} 
                     ~
!!! error TS1003: Identifier expected.
    